--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 <title>Login Page</title>
 </head>
 <body>
-
+<h1>this is git Login</h1>
 <form action="LoginServlet" method="post">
 
 Username: <input type="text" name="user">
@@ -13,6 +13,6 @@ Username: <input type="text" name="user">
 Password: <input type="password" name="pwd">
 <br>
 <input type="submit" value="Login">
-</form>
+</form> 
 </body>
 </html>
